--- a/index.html
+++ b/index.html
@@ -1,1 +1,17 @@
-
+<!DOCTYPE html>
+<html>
+	<head>
+		<script src="input.js"></script>
+	</head>
+	<body>
+		<h1>test</h1>
+		<form id="testForm">
+			<label id="testLabel" for="test">test input:</label>
+			<input id="test" type="text"></input>
+			<div class="submit">
+    			<button id="submit">press to test</button>
+			</div>
+		</form>
+		<p id="result"></p>
+	</body>
+</html>
